--- a/components/button/index.less
+++ b/components/button/index.less
@@ -20,6 +20,8 @@
  *         a.Button.Button--large.Button--primary Large
  *       .col-xs
  *         a.Button.Button--sharp.Button--primary Sharp
+ *       .col-xs
+ *         a.Button.Button--primary.is-disabled Disabled
  */
 
 @import "./config";
