--- a/components/button/config.less
+++ b/components/button/config.less
@@ -53,7 +53,9 @@
     &:disabled {
       opacity: 0.65;
 
-      &:hover {
+      &:hover,
+      &:active,
+      &:focus {
         cursor: default;
         background-color: @background-color;
       }
