Update table styles, less padding and no header bg, bold header

--- a/components/table/config.less
+++ b/components/table/config.less
@@ -1,11 +1,12 @@
 @table-header-font-size: @table-cell-font-size;
-@table-header-font-weight: 400;
+@table-header-font-weight: 600;
 @table-header-height: @grid-gutter-width-large;
-@table-header-padding: 19px;
-@table-header-background-color: @gray-lighter;
+@table-header-padding-vertical: @table-cell-padding-vertical;
+@table-header-padding-horizontal: @table-cell-padding-horizontal;
 
 @table-cell-font-size: 13px;
-@table-cell-padding: 19px;
+@table-cell-padding-vertical: 15px;
+@table-cell-padding-horizontal: 19px;
 @table-cell-compact-padding: 5px;
 
 @table-margin-bottom: @vertical-gutter-height;
