Rename z-index vars and add nav/dropdown values

--- a/components/z-index/config.less
+++ b/components/z-index/config.less
@@ -1,4 +1,8 @@
-@z-index-base: 0;
-@z-index-backdrop: 1000;
-@z-index-dropdown: 5000:
-@z-index-modal: 6000;
+@z-index-notification     : 9000;
+@z-index-modal            : 8000;
+@z-index-modal-overlay    : 7000;
+@z-index-nav-bar-primary  : 6000;
+@z-index-nav-bar-secondary: 5000;
+@z-index-dropdown         : 4000;
+@z-index-footer           : 3000;
+@z-index-base             : 1;
