Make sure headers break-word since they can be user generated

--- a/components/header/index.less
+++ b/components/header/index.less
@@ -22,6 +22,7 @@
 .Header-heading {
   margin: 0;
   font-size: @header-heading-font-size;
+  word-break: break-word;
 }
 
 .Header-heading--inline,
