Add semantic color variables

--- a/components/color/config.less
+++ b/components/color/config.less
@@ -34,3 +34,9 @@
 // DEPRECATED
 @gray-dark: @blue-darker;
 @gray-darker: @blue-darker;
+
+// Semantic colors
+@error-color: @orange;
+@warning-color: @mustard;
+@success-color: @green;
+@info-color: @blue;
