--- a/components/color/index.less
+++ b/components/color/index.less
@@ -7,35 +7,44 @@
  * **Note**: For dark grays, just use `.blue-*`.
  *
  *     @example
- *     div.flex
- *       div.color
- *         div.example-block.green-lightest @green-lightest
- *         div.example-block.green-lighter @green-lighter
- *         div.example-block.green-light @green-light
- *         div.example-block.green @green
- *         div.example-block.green-dark @green-dark
- *         div.example-block.green-darker @green-darker
- *         div.example-block.green-darkest @green-darkest
- *       div.color
- *         div.example-block.blue-lightest @blue-lightest
- *         div.example-block.blue-lighter @blue-lighter
- *         div.example-block.blue-light @blue-light
- *         div.example-block.blue @blue
- *         div.example-block.blue-dark @blue-dark
- *         div.example-block.blue-darker @blue-darker
- *         div.example-block.blue-darkest @blue-darkest
- *       div.color
- *         div.example-block.gray-lightest @gray-lightest
- *         div.example-block.gray-lighter @gray-lighter
- *         div.example-block.gray-light @gray-light
- *         div.example-block.gray @gray
- *         div.example-block.blue-dark @blue-dark
- *         div.example-block.blue-darker @blue-darker
- *         div.example-block.blue-darkest @blue-darkest
- *       div.color
- *         div.example-block.mustard @mustard
- *       div.color
- *         div.example-block.orange @orange
+ *     .Section.flex
+ *       .color
+ *         .example-block.green-lightest @green-lightest
+ *         .example-block.green-lighter @green-lighter
+ *         .example-block.green-light @green-light
+ *         .example-block.green @green
+ *         .example-block.green-dark @green-dark
+ *         .example-block.green-darker @green-darker
+ *         .example-block.green-darkest @green-darkest
+ *       .color
+ *         .example-block.blue-lightest @blue-lightest
+ *         .example-block.blue-lighter @blue-lighter
+ *         .example-block.blue-light @blue-light
+ *         .example-block.blue @blue
+ *         .example-block.blue-dark @blue-dark
+ *         .example-block.blue-darker @blue-darker
+ *         .example-block.blue-darkest @blue-darkest
+ *       .color
+ *         .example-block.gray-lightest @gray-lightest
+ *         .example-block.gray-lighter @gray-lighter
+ *         .example-block.gray-light @gray-light
+ *         .example-block.gray @gray
+ *         .example-block.blue-dark @blue-dark
+ *         .example-block.blue-darker @blue-darker
+ *         .example-block.blue-darkest @blue-darkest
+ *       .color
+ *         .example-block.mustard @mustard
+ *       .color
+ *         .example-block.orange @orange
+ *
+ *     .Section
+ *       .Section-header
+ *         h4.Section-header Semantic color variables
+ *       .Section-content.color.flex
+ *         .example-block.success-color @success-color
+ *         .example-block.info-color @info-color
+ *         .example-block.warning-color @warning-color
+ *         .example-block.error-color @error-color
  */
 
 @import "./config";
