--- a/styleguide/app.less
+++ b/styleguide/app.less
@@ -50,6 +50,22 @@ body.sg {
   }
 }
 
+.success-color {
+  background-color: @success-color;
+}
+
+.info-color {
+  background-color: @info-color;
+}
+
+.warning-color {
+  background-color: @warning-color;
+}
+
+.error-color {
+  background-color: @error-color;
+}
+
 .gray-light {
   background-color: @gray-light;
 }
