Add min-width to Button and remove padding/width on Button--none

--- a/components/button/config.less
+++ b/components/button/config.less
@@ -7,6 +7,7 @@
 @button-large-font-size: @button-font-size + 3px;
 @button-font-weight: 400;
 
+@button-min-width: 100px;
 @button-height: @input-height-base;
 @button-vertical-padding: 15px;
 @button-horizontal-padding: 20px;
