Add instead of extend compact styles to Table-headerCell--compact

--- a/components/table/index.less
+++ b/components/table/index.less
@@ -144,7 +144,7 @@
 }
 
 .Table-headerCell--compact {
-  &:extend(.Table-cell--compact);
+  .Table-cell--compact;
   font-size: @table-cell-font-size;
   height: auto;
 }
