--- a/components/input/config.less
+++ b/components/input/config.less
@@ -15,6 +15,8 @@
 
 @input-focus-border-color: @blue-dark;
 
+@input-disabled-background-color: @gray-lighter;
+
 #celery {
   .input-default() {
     border: @input-border-width solid @input-border-color;
@@ -29,6 +31,11 @@
     &:focus {
       outline: none;
       border-color: @input-focus-border-color;
+    }
+
+    &[disabled],
+    &[readonly] {
+      background-color: @input-disabled-background-color;
     }
   }
 }
