--- a/util/typography.less
+++ b/util/typography.less
@@ -2,3 +2,19 @@
 .u-number {
   font-feature-settings: "tnum";
 }
+
+.u-noWrap {
+  white-space: nowrap;
+}
+
+.u-alignRight {
+  text-align: right;
+}
+
+.u-alignCenter {
+  text-align: center;
+}
+
+.u-alignLeft {
+  text-align: left;
+}
