Add hover color for Button--none

--- a/components/button/index.less
+++ b/components/button/index.less
@@ -50,7 +50,7 @@
   &.is-disabled,
   &:disabled {
     opacity: @button-disabled-opacity;
-    
+
     &:hover,
     &:active,
     &:focus {
@@ -168,7 +168,7 @@
     &:active,
     &:focus {
       opacity: @button-disabled-opacity;
-      color: @blue;
+      color: @blue-dark;
     }
   }
 }
