--- a/components/panel/index.less
+++ b/components/panel/index.less
@@ -88,6 +88,12 @@
   }
 }
 
+.Panel-divider {
+  border-botttom: @border-base;
+  border-top: 0;
+  margin: @panel-gutter-size 0;
+}
+
 .Panel-footer {
   border-top: 1px solid @input-border-color;
   padding: @panel-gutter-size;
