--- a/components/panel/index.less
+++ b/components/panel/index.less
@@ -89,7 +89,7 @@
 }
 
 .Panel-divider {
-  border-botttom: @border-base;
+  border-bottom: @border-base;
   border-top: 0;
   margin: @panel-gutter-size 0;
 }
