--- a/components/toggle/config.less
+++ b/components/toggle/config.less
@@ -9,7 +9,8 @@
 @toggle-switch-gap: 3px;
 
 @toggle-label-font-family: @font-family-sans-serif;
-@toggle-label-font-size: 20px;
+@toggle-label-font-size: 18px;
+@toggle-heading-label-font-size: 20px;
 
 @toggle-status-font-size: 18px;
 @toggle-status-margin: 10px;
