Make headers vertical align middle

--- a/components/header/index.less
+++ b/components/header/index.less
@@ -17,6 +17,10 @@
   *:not([style="display: none;"]) + & {
     margin-top: @header-margin;
   }
+
+  & > * {
+    vertical-align: middle;
+  }
 }
 
 .Header-heading {
