--- a/components/section/index.less
+++ b/components/section/index.less
@@ -24,6 +24,10 @@
 .Section-header {
   &:extend(.u-cf all);
   margin-bottom: @section-header-margin;
+
+  & > * {
+    vertical-align: middle;
+  }
 }
 
 .Section-heading {
