Add styles for panel and sections subheadings

--- a/components/panel/config.less
+++ b/components/panel/config.less
@@ -11,5 +11,6 @@
 @panel-heading-line-height: 1;
 @panel-heading-color: @blue-darkest;
 @panel-heading-color-light: @blue-dark;
-
 @panel-heading-icon-margin: @grid-gutter-width;
+
+@panel-subheading-font-size: @font-size-base;
