--- a/components/section/config.less
+++ b/components/section/config.less
@@ -1,6 +1,8 @@
-@section-heading-color: @blue-darker;
-@section-heading-font-size: 18px;
-
 @section-header-margin: @vertical-gutter-height;
+
+@section-heading-color: @blue-darker;
+@section-heading-font-size: @font-size-base + 6;
+
+@section-subheading-font-size: @font-size-base;
 
 @section-margin: @vertical-gutter-height;
