--- a/components/checkbox/index.less
+++ b/components/checkbox/index.less
@@ -5,8 +5,9 @@
  *     @example
  *     .Checkbox
  *       label.Checkbox-label
- *         input.Checkbox-input(type="checkbox")
- *         span.Checkbox-icon
+ *         span.Checkbox-iconWrapper
+ *           input.Checkbox-input(type="checkbox")
+ *           span.Checkbox-icon
  *         span.Checkbox-text Free Shipping
  */
 
@@ -15,7 +16,7 @@
 .Checkbox {
   display: inline-block;
   font-size: @checkbox-text-font-size;
-  height: @checkbox-size;
+  min-height: @checkbox-size;
   vertical-align: middle;
   line-height: 1;
 }
@@ -25,12 +26,17 @@
 }
 
 .Checkbox-label {
+  display: table;
   margin: 0;
   font-weight: normal;
 }
 
 .Checkbox-input {
   display: none;
+}
+
+.Checkbox-iconWrapper {
+  display: table-cell;
 }
 
 .Checkbox-icon {
@@ -51,11 +57,12 @@
 }
 
 .Checkbox-text {
+  display: table-cell;
   color: @blue-darkest;
   font-size: @checkbox-text-font-size;
   line-height: 1;
   vertical-align: middle;
-  margin-left: @checkbox-text-margin-left;
+  padding-left: @checkbox-text-margin-left;
 }
 
 .Checkbox-icon:before {
