--- a/components/table/config.less
+++ b/components/table/config.less
@@ -4,7 +4,7 @@
 @table-header-padding-vertical: @table-cell-padding-vertical;
 @table-header-padding-horizontal: @table-cell-padding-horizontal;
 
-@table-cell-vertical-align: baseline;
+@table-cell-vertical-align: middle;
 @table-cell-font-size: 13px;
 @table-cell-padding-vertical: 15px;
 @table-cell-padding-horizontal: 19px;
