--- a/components/button/index.less
+++ b/components/button/index.less
@@ -22,6 +22,8 @@
  *         a.Button.Button--sharp.Button--primary Sharp
  *       .col-xs
  *         a.Button.Button--primary.is-disabled Disabled
+ *       .col-xs
+ *         a.Button.Button--none None
  */
 
 @import "./config";
@@ -157,6 +159,7 @@
 
 .Button--none {
   .Button--transparent;
+  #celery.link;
   border: 0;
   padding: 0;
   min-width: auto;
