--- a/components/link/config.less
+++ b/components/link/config.less
@@ -1,2 +1,12 @@
 @link-color: @blue;
 @link-hover-color: @blue-lighter;
+
+#celery {
+  .link {
+    color: @link-color;
+
+    &:hover {
+      color: @link-hover-color;
+    }
+  }
+}
