Add border-color to button transition properties

--- a/components/button/config.less
+++ b/components/button/config.less
@@ -35,7 +35,7 @@
 #celery {
   .button-animation(@duration) {
     transition: @duration @button-transition-timing;
-    transition-property: background-color, opacity;
+    transition-property: border-color, background-color, opacity;
   }
 
   .button-vertical-padding(@height, @font-size, @border-width: 1px) {
