Remove padding on last Panel

--- a/components/panel/index.less
+++ b/components/panel/index.less
@@ -41,6 +41,10 @@
 .Panel {
   #celery.default-border;
   margin-bottom: @panel-margin;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .Panel--inline {
