--- a/components/button/index.less
+++ b/components/button/index.less
@@ -153,8 +153,9 @@
 }
 
 .Button--transparent {
-  background: none;
-  border: 1px solid transparent;
+  color: @button-default-color;
+  background-color: transparent;
+  border-color: transparent;
 }
 
 .Button--none {
