Add danger button

--- a/components/button/config.less
+++ b/components/button/config.less
@@ -30,6 +30,9 @@
 @button-action-color: @white;
 @button-action-background-color: @blue;
 
+@button-danger-color: @white;
+@button-danger-background-color: @orange;
+
 @button-default-color: @blue;
 @button-default-background-color: @white;
 @button-default-border-color: @gray-light;
