Add Link--danger variant

--- a/components/link/config.less
+++ b/components/link/config.less
@@ -1,6 +1,9 @@
 @link-color: @blue;
 @link-hover-color: @blue-lighter;
 
+@link-danger-color: @orange;
+@link-danger-hover-color: lighten(@orange, 10%);
+
 #celery {
   .link {
     color: @link-color;
