Add disabled style for Toggle

--- a/components/toggle/config.less
+++ b/components/toggle/config.less
@@ -3,6 +3,12 @@
 @toggle-on-color: @green;
 @toggle-off-color: @gray;
 
+@toggle-on-background-color: @green;
+@toggle-on-disabled-background-color: fade(@green, 70%);
+
+@toggle-off-background-color: @gray-light;
+@toggle-off-disabled-background-color: lighten(@gray-light, 5%);
+
 @toggle-height: 28px;
 @toggle-width: 50px;
 
