font and style fixes

--- a/components/button/index.less
+++ b/components/button/index.less
@@ -34,6 +34,7 @@
   display: inline-block;
   min-width: @button-min-width;
   padding: @button-vertical-padding @button-horizontal-padding;
+  font-family: @button-font-family;
   font-size: @button-font-size;
   font-weight: @button-font-weight;
   line-height: 1;
