--- a/components/label/config.less
+++ b/components/label/config.less
@@ -1,7 +1,7 @@
 @import "../input/config";
 
-@label-font-size: @input-font-size-base + 1;
-@label-font-color: @blue-darker;
+@label-font-size: @input-font-size-base - 1;
+@label-font-color: @blue-dark;
 @label-margin-bottom: @label-font-size / 2;
 
 @label-optional-font-size: 12px;
