--- a/components/toggle/index.less
+++ b/components/toggle/index.less
@@ -56,6 +56,7 @@
 .Toggle--heading {
   .Toggle-labelText {
     font-size: @toggle-heading-label-font-size;
+    font-family: @toggle-label-font-family;
   }
 }
 
