--- a/components/typography/config.less
+++ b/components/typography/config.less
@@ -1,11 +1,11 @@
 @line-height-base: 1.4;
 
-@font-size-base: 14px;
-@font-size-small: 12px;
-@font-size-large: 16px;
+@font-size-base: 15px;
+@font-size-small: 13px;
+@font-size-large: 17px;
 // Open Sans cap height
 @cap-height: 0.7727272727;
 
-@font-family-sans-serif: "open-sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-@font-family-serif: "ff-tisa-sans-web-pro", serif;
+@font-family-sans-serif: "proxima nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-serif: "effra", serif;
 @font-family-monospace: Inconsolata, Menlo, Monaco, Consolas, "Courier New", monospace;
