--- a/components/typography/config.less
+++ b/components/typography/config.less
@@ -4,9 +4,10 @@
 @font-size-xsmall: 11px;
 @font-size-small: 12px;
 @font-size-large: 16px;
+
 // Open Sans cap height
 @cap-height: 0.7727272727;
 
-@font-family-sans-serif: "open-sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-@font-family-serif: "ff-tisa-sans-web-pro", serif;
+@font-family-sans-serif: "proxima nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-serif: "effra", serif;
 @font-family-monospace: Inconsolata, Menlo, Monaco, Consolas, "Courier New", monospace;
