--- a/components/code-block/index.less
+++ b/components/code-block/index.less
@@ -18,9 +18,11 @@
 .CodeBlock {
   padding: @code-block-padding;
   font-family: @code-block-font-family;
+  font-size: @font-size-base - 2px;
   line-height: @code-block-line-height;
   word-wrap: @code-block-word-wrap;
   overflow: @code-block-overflow;
   border-radius: @code-block-border-radius;
   background-color: @code-block-background-color;
+  border: 1px solid @gray-light;
 }
