--- a/components/color/config.less
+++ b/components/color/config.less
@@ -9,13 +9,13 @@
 
 // Colors
 @white: #FFF;
-@mustard: #DBB516;
-@orange: #F27935;
+@mustard: #DCB600;
+@orange: #F47928;
 
 @green-lightest: lighten(@green, @color-grade-3);
 @green-lighter: lighten(@green, @color-grade-2);
 @green-light: lighten(@green, @color-grade-1);
-@green: #2EB256;
+@green: #24B352;
 @green-dark: darken(@green, @color-grade-1);
 @green-darker: darken(@green, @color-grade-2);
 @green-darkest: darken(@green, @color-grade-3);
@@ -23,12 +23,12 @@
 @blue-lightest: lighten(@blue, @color-grade-3);
 @blue-lighter: lighten(@blue, @color-grade-2);
 @blue-light: lighten(@blue, @color-grade-1);
-@blue: #419CD4;
-@blue-dark: #7C838C;
-@blue-darker: #424E5E;
-@blue-darkest: #29313B;
+@blue: #3B9BD6;
+@blue-dark: #747B84;
+@blue-darker: #414E5F;
+@blue-darkest: #29323B;
 
-@gray-lighter: #F9F9F9;
+@gray-lighter: #F7F7F7;
 @gray-light: #D9DCDF;
 @gray: #AAA;
 // DEPRECATED
