--- a/components/header/index.less
+++ b/components/header/index.less
@@ -26,6 +26,8 @@
 .Header-heading {
   margin: 0;
   font-size: @header-heading-font-size;
+  font-family: @header-heading-font-family;
+  font-weight: lighter;
   word-break: break-word;
 }
 
