--- a/components/section/index.less
+++ b/components/section/index.less
@@ -32,6 +32,7 @@
 
 .Section-heading {
   font-size: @section-heading-font-size;
+  font-family: @section-heading-font-family;
   color: @section-heading-color;
 }
 
