--- a/components/table/config.less
+++ b/components/table/config.less
@@ -5,7 +5,7 @@
 @table-header-padding-horizontal: @table-cell-padding-horizontal;
 
 @table-cell-vertical-align: middle;
-@table-cell-font-size: 13px;
+@table-cell-font-size: @font-size-base - 1;
 @table-cell-padding-vertical: 15px;
 @table-cell-padding-horizontal: 19px;
 @table-cell-compact-padding: 5px;
