--- a/components/panel/config.less
+++ b/components/panel/config.less
@@ -1,12 +1,12 @@
 // Generic panels are blocks of content that are chunked.
 // Eg: A standalone chart or metric, a preview, etc
 
-@panel-gutter-size: @grid-gutter-width;
+@panel-gutter-size: @grid-gutter-width * 2;
 @panel-margin: @grid-gutter-width;
 
-@panel-header-padding: @grid-gutter-width;
+@panel-header-padding: @grid-gutter-width * 2;
 
-@panel-heading-font-size: @font-size-base + 8;
+@panel-heading-font-size: @font-size-base + 9;
 @panel-heading-small-font-size: @font-size-base;
 @panel-heading-line-height: 1;
 @panel-heading-color: @blue-darkest;
