--- a/components/section/config.less
+++ b/components/section/config.less
@@ -1,7 +1,8 @@
 @section-header-margin: @vertical-gutter-height;
 
 @section-heading-color: @blue-darker;
-@section-heading-font-size: @font-size-base + 6;
+@section-heading-font-size: @font-size-base + 5;
+@section-heading-font-family: @font-family-serif;
 
 @section-subheading-font-size: @font-size-base;
 
