--- a/components/transition/config.less
+++ b/components/transition/config.less
@@ -1,3 +1,3 @@
 @transition-duration-base: .15s;
-@transition-timing-base: ease-in-out;
+@transition-timing-base: cubic-bezier(0.420, 0.000, 0.580, 1.000);
 @transition-base: @transition-duration-base @transition-timing-base;
