serif -> sans-serif

--- a/components/typography/config.less
+++ b/components/typography/config.less
@@ -9,5 +9,5 @@
 @cap-height: 0.7727272727;
 
 @font-family-sans-serif: "proxima nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
-@font-family-serif: "effra", serif;
+@font-family-serif: "effra", sans-serif;
 @font-family-monospace: Inconsolata, Menlo, Monaco, Consolas, "Courier New", monospace;
