--- a/components/button/config.less
+++ b/components/button/config.less
@@ -2,7 +2,7 @@
 @import "../input/config";
 @import "../border/config";
 
-@button-font-family: "effra", serif;
+@button-font-family: @font-family-serif;
 @button-font-size: 15px;
 @button-small-font-size: @button-font-size - 1px;
 @button-large-font-size: @button-font-size + 3px;
