Adjust font family variable names

--- a/components/heading/config.less
+++ b/components/heading/config.less
@@ -1,6 +1,6 @@
 @heading-color: @blue-darkest;
 
-@heading-font-family: @font-family-sans-serif;
+@heading-font-family: @font-family-common;
 @heading-font-weight: 400;
 @heading-line-height: 1.3;
 
