--- a/components/section/config.less
+++ b/components/section/config.less
@@ -2,7 +2,7 @@
 
 @section-heading-color: @blue-darker;
 @section-heading-font-size: @font-size-base + 5;
-@section-heading-font-family: @font-family-serif;
+@section-heading-font-family: @font-family-accent;
 
 @section-subheading-font-size: @font-size-base;
 
