--- a/components/toggle/config.less
+++ b/components/toggle/config.less
@@ -14,7 +14,7 @@
 
 @toggle-switch-gap: 3px;
 
-@toggle-label-font-family: @font-family-serif;
+@toggle-label-font-family: @font-family-accent;
 @toggle-label-font-size: 20px;
 @toggle-heading-label-font-size: 20px;
 
