--- a/components/typography/index.less
+++ b/components/typography/index.less
@@ -3,8 +3,8 @@
  * Sets `html` and `body` `font-size` and `font-family`.
  *
  *     @example
- *     p Default font-family (`@font-family-sans-serif`).
- *     p.serif Serif font-family (`@font-family-serif`).
+ *     p Default font-family (`@font-family-common`).
+ *     p.serif Serif font-family (`@font-family-accent`).
  *     p.monospace Mono font-family (`@font-family-monospace`).
  */
 
@@ -12,5 +12,5 @@
 
 html, body {
   font-size: @font-size-base;
-  font-family: @font-family-sans-serif;
+  font-family: @font-family-common;
 }
