--- a/components/typography/config.less
+++ b/components/typography/config.less
@@ -9,6 +9,6 @@
 @cap-height: 0.7727272727;
 
 // Todo : Better name for font family
-@font-family-sans-serif: "proxima nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
-@font-family-serif: "effra", sans-serif;
+@font-family-common: "proxima nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-accent: "effra", sans-serif;
 @font-family-monospace: Inconsolata, Menlo, Monaco, Consolas, "Courier New", monospace;
