updating disabled states

--- a/components/button/config.less
+++ b/components/button/config.less
@@ -23,7 +23,8 @@
 @button-transition-duration: 0.15s;
 @button-transition-fast-duration: 0.1s;
 
-@button-disabled-opacity:  0.65;
+@button-disabled-opacity: 0.65;
+@button-disabled-color: @gray;
 
 @button-primary-color: @white;
 @button-primary-background-color: @green;
